commit translated contents

--- a/learn-certs-pr/azure-administrator/renew/index.yml
+++ b/learn-certs-pr/azure-administrator/renew/index.yml
@@ -4,10 +4,10 @@ metadata:
   title: 'Erneuerung von Microsoft Certified: Azure Administrator Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
   ms.openlocfilehash: bd2a7daf70e34297ffe52650f04e7278d40ce29a
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132111053"
 uid: renewal.azure-administrator
 certificationUid: certification.azure-administrator
@@ -26,8 +26,8 @@ skills:
 - Manage users and groups in Azure Active Directory
 examsPassed:
 - az-104
-studyGuideDescription: 'Nutzen Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen „Microsoft 365 Certified: Azure Administrator Associate“ vorzubereiten.'
+studyGuideDescription: 'Nutzen Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen Microsoft 365 Certified: Azure Administrator Associate vorzubereiten.'
 resources:
 - title: Informationen zur Zertifizierungserneuerung
-  summary: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
+  summary: Grundlagen zum Prozess und zu den Anforderungen der Onlineverlängerung Ihrer Zertifizierungen
   url: https://docs.microsoft.com/learn/certifications/renew-your-microsoft-certification
