--- a/learn-certs-pr/courses/mb-910t00.yml
+++ b/learn-certs-pr/courses/mb-910t00.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Course
-title: Microsoft Certified Dynamics 365-Grundlagen (CRM)
+title: 'Microsoft Certified: Dynamics 365 Fundamentals (CRM)'
 metadata:
-  title: 'Kurs MB-910T00--A: Microsoft Certified: Dynamics 365-Grundlagen (CRM)'
-  description: 'Kurs MB-910T00--A: Microsoft Certified: Dynamics 365-Grundlagen (CRM)'
+  title: 'Kurs MB-910T00--A: Microsoft Certified: Dynamics 365 Fundamentals (CRM)'
+  description: 'Kurs MB-910T00--A: Microsoft Certified: Dynamics 365 Fundamentals (CRM)'
   ms.openlocfilehash: bcb4fbab9fff918734880aa117ad3e1504fe4b4f
-  ms.sourcegitcommit: 9bfbb97729fa34bbe669b33c8b394f497cfc6cb1
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/06/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132113589"
 uid: course.mb-910t00
 courseNumber: MB-910T00
@@ -53,7 +53,7 @@ outlineSection: >-
   ### <a name="module-1-learn-the-fundamentals-of-dynamics-365-marketing"></a>Modul 1: Grundlegende Informationen zu Dynamics 365 for Marketing
 
 
-  In diesem Modul werden die grundlegenden Konzepte der Kundenbindung und die Gemeinsamkeiten der Apps für die Kundenbindung behandelt, bevor Sie sich mit Dynamics 365 for Marketing vertraut machen. Zunächst werden die Standardgeschäftsprozesse im Marketingbereich und deren Umsetzung in Dynamics 365 for Marketing beschrieben. Anschließend werden die Produktfunktionen untersucht. Abschließend werden weitere Marketing-Apps wie LinkedIn Campaign Manager, Dynamics 365 for Customer Voice und Dynamics 365 for Customer Insights vorgestellt.
+  In diesem Modul werden die grundlegenden Konzepte der Kundenbindung und die Gemeinsamkeiten der Apps für die Kundenbindung behandelt, bevor Sie sich mit Dynamics 365 for Marketing vertraut machen. Zunächst werden die Standardgeschäftsprozesse im Marketingbereich und deren Umsetzung in Dynamics 365 for Marketing beschrieben. Anschließend werden die Produktfunktionen analysiert. Und zuletzt werden Sie über weitere Marketing-Apps wie LinkedIn Campaign Manager, Dynamics 365 for Customer Voice und Dynamics 365 for Customer Insights informiert.
 
 
   #### <a name="lessons"></a>Lektionen
@@ -311,4 +311,4 @@ outlineSection: >-
   #### <a name="additional-reading"></a>Weiterführende Lektüre
 
 
-  Weitere Informationen zu den Inhalten dieses Kurses finden Sie auf Microsoft Learn. Beachten Sie, dass für jedes Produkt ein eigener Lernpfad verfügbar ist.
+  Weitere Informationen zu den Inhalten dieses Kurses finden Sie unter Microsoft Learn. Beachten Sie, dass für jedes Produkt ein eigener Lernpfad verfügbar ist.
