--- a/learn-certs-pr/d365-finance-and-operations-apps-developer-associate/index.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-developer-associate/index.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
+title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
+  title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
   description: Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Kandidaten bieten vollständig realisierte Lösungen, indem sie standardisierte Anwendungskodierungsmuster, erweiterbare Funktionen und externe Integrationen verwenden.
   ms.openlocfilehash: 3b148a577473f7e96e116da2ccef1f445e77e373
-  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/24/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "133079062"
 uid: certification.d365-finance-and-operations-apps-developer-associate
 certificationRenewalUid: renewal.d365-finance-and-operations-apps-developer-associate
@@ -91,5 +91,5 @@ resources:
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
