--- a/learn-certs-pr/d365-functional-consultant-marketing-legacy.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing-legacy.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate (Legacy)'
+title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate (Legacy)'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate (Legacy)'
+  title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate (Legacy)'
   description: Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
   ms.openlocfilehash: 8033941c795594b5968feb1066729f012cb91097
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132106786"
 uid: certification.d365-functional-consultant-marketing-erlr
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
@@ -89,6 +89,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
-- title: Freigeben Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn in LinkedIn oder in Ihrem Lebenslauf und anderem mehr hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: badges.md
