--- a/learn-certs-pr/exams/mb-900.yml
+++ b/learn-certs-pr/exams/mb-900.yml
@@ -4,10 +4,10 @@ metadata:
   title: 'Examen MB-900: Microsoft Dynamics 365 Fundamentals'
   description: 'Examen MB-900: Microsoft Dynamics 365 Fundamentals'
   ms.openlocfilehash: 41695790e8bc021b68d258c43cd3b2460f8b927d
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132105779"
 uid: exam.mb-900
 displayName: MB-900
@@ -51,7 +51,7 @@ relatedCertifications:
     uid: certification.d365-fundamentals
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie Schulungsressourcen, um die Zertifizierung „Microsoft Certified: Dynamics 365 Fundamentals“ zu erlangen.'
+  description: 'Entdecken Sie Schulungsressourcen, um die Zertifizierung Microsoft Certified: Dynamics 365 Fundamentals zu erlangen.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35v9m
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
