--- a/learn-certs-pr/m365-teams-administrator-associate/renew/index.yml
+++ b/learn-certs-pr/m365-teams-administrator-associate/renew/index.yml
@@ -4,10 +4,10 @@ metadata:
   title: 'Erneuerung von Microsoft 365 Certified: Teams Administrator Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
   ms.openlocfilehash: 7e2d5005ed46db99a79374552affb9b5ea4ec641
-  ms.sourcegitcommit: 468e49f99bce29f3130cccd97af130459746d6c5
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 10/07/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132112813"
 uid: renewal.m365-teams-administrator-associate
 certificationUid: certification.m365-teams-administrator-associate
@@ -30,5 +30,5 @@ examsPassed:
 studyGuideDescription: 'Nutzen Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen „Microsoft 365 Certified: Teams Administrator Associate“ vorzubereiten.'
 resources:
 - title: Informationen zur Zertifizierungserneuerung
-  summary: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
+  summary: Grundlagen zum Prozess und zu den Anforderungen der Onlineverlängerung Ihrer Zertifizierungen
   url: https://docs.microsoft.com/learn/certifications/renew-your-microsoft-certification
