--- a/learn-certs-pr/m365-teams-voice-engineer-expert/index.yml
+++ b/learn-certs-pr/m365-teams-voice-engineer-expert/index.yml
@@ -4,10 +4,10 @@ metadata:
   title: 'Microsoft 365 Certified: Teams Voice Engineer Expert'
   description: Microsoft Teams Voice Engineers planen, entwerfen, konfigurieren und warten eine integrierte Kommunikationslösung in einer Organisation und führen Maßnahmen zur Problembehandlung durch.
   ms.openlocfilehash: 2989db117e86b95f3ae8af704925067c99c97d61
-  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/24/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "133078841"
 uid: certification.m365-teams-voice-engineer-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
@@ -21,7 +21,7 @@ summary: >-
   Kandidaten sind mit Telekommunikationstechnologien vertraut und verfügen über Erfahrung mit Microsoft Teams, Microsoft 365 und PowerShell. Die Kandidaten arbeiten mit Telefonieanbietern und Drittanbietern zusammen, um erweiterte Sprachfunktionen in Microsoft Teams zu ermöglichen.
 
 
-  Zum Erhalten der Zertifizierung „Microsoft 365 Certified: Teams Voice Engineer Expert“ müssen die Kandidaten außerdem die Zertifizierung <a href="/learn/certifications/m365-teams-administrator-associate/">Microsoft 365 Certified: Teams Administrator Associate</a> erlangen.
+  Zum Erhalten der Zertifizierung „Microsoft 365 Certified: Teams Voice Engineer Expert“ müssen die Kandidaten außerdem die Zertifizierung <a href="/learn/certifications/m365-teams-administrator-associate/">Microsoft 365 Certified: Teams Administrator Associate</a> erlangen.
 subTitle: Microsoft Teams Voice Engineers planen, entwerfen, konfigurieren und warten eine integrierte Kommunikationslösung in einer Organisation und führen Maßnahmen zur Problembehandlung durch.
 levels:
 - advanced
@@ -66,5 +66,5 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
