--- a/learn-certs-pr/mcsa-bi-reporting/index.yml
+++ b/learn-certs-pr/mcsa-bi-reporting/index.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Certification
-title: 'MCSA: BI-Berichterstellung'
+title: 'MCSA: BI Reporting'
 metadata:
-  title: 'MCSA: BI-Berichterstellung'
-  description: 'MCSA: BI-Berichterstellung'
+  title: 'MCSA: BI Reporting'
+  description: 'MCSA: BI Reporting'
   ms.openlocfilehash: 42be0797be73226eca8f4da62990dc5d6ede0ba4
-  ms.sourcegitcommit: 35b014146be2d7badafdb39548c387b2af6c0314
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 10/15/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132113021"
 uid: certification.mcsa-bi-reporting
 iconUrl: /media/learn/certification/badges/mcsa-badge.svg
@@ -55,6 +55,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn in LinkedIn oder in Ihrem Lebenslauf hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
