--- a/learn-certs-pr/mcsa-microsoft-dynamics-365-for-operations/index.yml
+++ b/learn-certs-pr/mcsa-microsoft-dynamics-365-for-operations/index.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Certification
-title: 'MCSA: Microsoft Dynamics 365 für den Verkauf'
+title: 'MCSA: Microsoft Dynamics 365 for Operations'
 metadata:
-  title: 'MCSA: Microsoft Dynamics 365 für den Verkauf'
-  description: 'MCSA: Microsoft Dynamics 365 für den Verkauf'
+  title: 'MCSA: Microsoft Dynamics 365 for Operations'
+  description: 'MCSA: Microsoft Dynamics 365 for Operations'
   ms.openlocfilehash: 91465a418e72248a9ef0dd79ae0863205d889884
-  ms.sourcegitcommit: 35b014146be2d7badafdb39548c387b2af6c0314
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 10/15/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132113005"
 uid: certification.mcsa-microsoft-dynamics-365-for-operations
 iconUrl: /media/learn/certification/badges/mcsa-badge.svg
