--- a/learn-certs-pr/microsoft-365-fundamentals/index.yml
+++ b/learn-certs-pr/microsoft-365-fundamentals/index.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Certification
-title: 'Microsoft 365 Certified: Fundamentals'
+title: 'Microsoft 365 Certified: Fundamentals'
 metadata:
-  title: 'Microsoft 365 Certified: Fundamentals'
+  title: 'Microsoft 365 Certified: Fundamentals'
   description: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
   ms.openlocfilehash: 252dee2886a534c7cc66a22139e1072e36108637
-  ms.sourcegitcommit: 9ce6bfd5b440f21921db0832e2a560c814478dcb
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/02/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132113093"
 uid: certification.microsoft-365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
