--- a/learn-certs-pr/modern-desktop/index.yml
+++ b/learn-certs-pr/modern-desktop/index.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Certification
-title: 'Microsoft 365 Certified: Modern Desktop Administrator Associate'
+title: 'Microsoft 365 Certified: Modern Desktop Administrator Associate'
 metadata:
-  title: 'Microsoft 365 Certified: Modern Desktop Administrator Associate'
+  title: 'Microsoft 365 Certified: Modern Desktop Administrator Associate'
   description: Modern Desktop Administrators stellen Geräte und Client-Apps in einer Unternehmensumgebung bereit und übernehmen ihre Konfiguration, ihren Schutz, ihre Verwaltung und ihre Überwachung.
   ms.openlocfilehash: 5bc18a9f5b28a3b88d92fa35e90e16266976f9ca
-  ms.sourcegitcommit: 629987a1453ce12f333d7208ec519258e24f4d78
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/03/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "133530046"
 uid: certification.modern-desktop
 certificationRenewalUid: renewal.m365-modern-desktop
@@ -66,5 +66,5 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
