--- a/learn-certs-pr/mos-word-expert-2019/index.yml
+++ b/learn-certs-pr/mos-word-expert-2019/index.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Certification
-title: 'Microsoft Office Specialist: Microsoft Word Expert (Word und Word 2019)'
+title: 'Microsoft Office Specialist: Microsoft Word Expert (Word and Word 2019)'
 metadata:
-  title: 'Microsoft Office Specialist: Microsoft Word Expert (Word und Word 2019)'
+  title: 'Microsoft Office Specialist: Microsoft Word Expert (Word and Word 2019)'
   description: 'Zeigen Sie, dass Sie über die zur optimalen Nutzung von Word erforderlichen Fähigkeiten verfügen, indem Sie die Zertifizierung „Microsoft Office Specialist: Word Expert“ erwerben.'
   ms.openlocfilehash: d093174546dc3802143cb9de86b834e5899e474e
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132111605"
 uid: certification.mos-word-expert-2019
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
@@ -46,6 +46,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg in Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise LinkedIn oder Ihrem Lebenslauf hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
