--- a/learn-certs-pr/power-apps-and-d365-developer-associate/index.yml
+++ b/learn-certs-pr/power-apps-and-d365-developer-associate/index.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Power Apps + Dynamics 365 Developer Associate'
+title: 'Microsoft Certified: Power Apps + Dynamics 365 Developer Associate'
 metadata:
-  title: 'Microsoft Certified: Power Apps + Dynamics 365 Developer Associate'
+  title: 'Microsoft Certified: Power Apps + Dynamics 365 Developer Associate'
   description: Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von Dynamics 365-Implementierungen verantwortlich. Die Kandidaten implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrung, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen umfassen.
   ms.openlocfilehash: d6921b4001203cdb642b4405e3b3c723711bb5c4
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132111911"
 uid: certification.power-apps-and-d365-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
