--- a/learn-certs-pr/d365-functional-consultant-customer-service-legacy.yml
+++ b/learn-certs-pr/d365-functional-consultant-customer-service-legacy.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate (Legacy)'
+title: 'Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate (Legacy)'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate (Legacy)'
+  title: 'Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate (Legacy)'
   description: Microsoft Dynamics 365 Customer Service Functional Consultants schafft CX Lösungen, die schnell und flexibel sind und KI nutzen, um praxisorientierte Einsichten zu liefern, damit Verbraucheranforderungen vorausgesehen werden können.
   ms.openlocfilehash: 7d1cd8f0bb8dcff9b45f981306326e8de954d478
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132106899"
 uid: certification.d365-functional-consultant-customer-service-erlr
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: >-
-  <div><font color="#D83B01"><strong>Diese Version der Zertifizierung ist nicht mehr verfügbar. Wenn Sie über diese Version der Zertifizierung verfügen, erhalten Sie automatisch die aktuelle Version der Zertifizierung.<br/><br/>  Beide Versionen werden in Ihren Zertifizierungen aufgeführt. Sie müssen nur die aktuellere Version erneuern. Wenn die vorherige Version abläuft, wird sie in den Abschnitt „Zertifizierungsverlauf“ Ihres Transkripts verschoben.<br/><br/></strong></font></div>
+  <div><font color="#D83B01"><strong>Diese Version der Zertifizierung ist nicht mehr verfügbar. Wenn Sie über diese Version der Zertifizierung verfügen, erhalten Sie automatisch die aktuelle Version der Zertifizierung.<br/><br/>  Beide Versionen der Zertifizierung werden in Ihren Zertifizierungen aufgeführt. Sie müssen nur die aktuellere Version erneuern. Wenn die vorherige Version abläuft, wird sie in den Abschnitt „Zertifizierungsverlauf“ Ihres Transkripts verschoben.<br/><br/></strong></font></div>
 
 
   Wenn Sie ein*e Functional Consultant sind, der*die für das Konfigurieren und Implementieren von Dynamics 365-Lösungen für Kund*innen verantwortlich ist, können Sie diese Zertifizierung verwenden, um Ihre Qualifikationen hervorzuheben und Ihre Karriere voranzubringen. Ein*e Functional Consultant für Dynamics 365 Customer Service implementiert Omnichannel-Lösungen, bei denen der Fokus auf Service, Qualität, Zuverlässigkeit, Effizienz und Kundenzufriedenheit liegt. Als Functional Consultant wissen Sie, wie Sie mit Projektmanager*innen, Entwickler*innen und Lösungsarchitekt*innen zusammenarbeiten. Sie benötigen mindestens ein bis drei Jahre Erfahrung als Functional Consultant bei der Implementierung von Dynamics 365.
@@ -91,6 +91,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
-- title: Teilen Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn in LinkedIn oder in Ihrem Lebenslauf hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: badges.md
