--- a/learn-certs-pr/d365-functional-consultant-field-service/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-field-service/renew/index.yml
@@ -4,10 +4,10 @@ metadata:
   title: 'Erneuerung von Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
   ms.openlocfilehash: 4012ee5ecea1c32fa3010468c4422ccd617f05fb
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132106858"
 uid: renewal.d365-functional-consultant-field-service
 certificationUid: certification.d365-functional-consultant-field-service
@@ -24,8 +24,8 @@ skills:
 - Get started with Connected Field Service for Dynamics 365 and Azure IoT
 examsPassed:
 - pl-200, mb-240
-studyGuideDescription: 'Verwenden Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen „Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate“ vorzubereiten.'
+studyGuideDescription: 'Verwenden Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate vorzubereiten.'
 resources:
 - title: Informationen zur Zertifizierungserneuerung
-  summary: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
+  summary: Grundlagen zum Prozess und zu den Anforderungen der Onlineverlängerung Ihrer Zertifizierungen
   url: https://docs.microsoft.com/learn/certifications/renew-your-microsoft-certification
