--- a/learn-certs-pr/d365-functional-consultant-sales/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales/renew/index.yml
@@ -1,13 +1,13 @@
 ### YamlMime:CertificationRenewal
-title: 'Erneuerung von Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate'
+title: 'Erneuerung von Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate'
 metadata:
-  title: 'Erneuerung von Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate'
+  title: 'Erneuerung von Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
   ms.openlocfilehash: b6252ebb1ff87f9adca586f11a3eda220d651634
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132106730"
 uid: renewal.d365-functional-consultant-sales
 certificationUid: certification.d365-functional-consultant-sales
@@ -24,8 +24,8 @@ skills:
 - Working with Dynamics 365 Sales Insights
 examsPassed:
 - pl-200, mb-210
-studyGuideDescription: 'Verwenden Sie diese Lernmodule, um sich auf das Erneuerungsexamen „Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate“ vorzubereiten.'
+studyGuideDescription: 'Verwenden Sie diese Lernmodule, um sich auf das Erneuerungsexamen Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate vorzubereiten.'
 resources:
 - title: Informationen zur Zertifizierungserneuerung
-  summary: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
+  summary: Grundlagen zum Prozess und zu den Anforderungen der Onlineverlängerung Ihrer Zertifizierungen
   url: https://docs.microsoft.com/learn/certifications/renew-your-microsoft-certification
