--- a/learn-certs-pr/d365-functional-consultant-supply-chain-management/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-supply-chain-management/renew/index.yml
@@ -4,10 +4,10 @@ metadata:
   title: 'Erneuerung von Microsoft Certified: Dynamics 365 Supply Chain Management Functional Consultant Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
   ms.openlocfilehash: aece161965d7bfb20e751a0dad94778b0474111d
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132106714"
 uid: renewal.d365-functional-consultant-supply-chain-management
 certificationUid: certification.d365-functional-consultant-supply-chain-management
@@ -20,8 +20,8 @@ skills:
 - Use Planning Optimization in Dynamics 365 Supply Chain Management
 examsPassed:
 - mb-300, mb-330
-studyGuideDescription: 'Verwenden Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen „Microsoft Certified: Dynamics 365 Supply Chain Management Functional Consultant Associate“ vorzubereiten.'
+studyGuideDescription: 'Verwenden Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen Microsoft Certified: Dynamics 365 Supply Chain Management Functional Consultant Associate vorzubereiten.'
 resources:
 - title: Informationen zur Zertifizierungserneuerung
-  summary: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
+  summary: Grundlagen zum Prozess und zu den Anforderungen der Onlineverlängerung Ihrer Zertifizierungen
   url: https://docs.microsoft.com/learn/certifications/renew-your-microsoft-certification
