--- a/learn-certs-pr/m365-developer-associate/renew/index.yml
+++ b/learn-certs-pr/m365-developer-associate/renew/index.yml
@@ -1,20 +1,20 @@
 ### YamlMime:CertificationRenewal
-title: 'Erneuerung von Microsoft 365 Certified: Developer Associate'
+title: 'Erneuerung von Microsoft 365 Certified: Developer Associate'
 metadata:
-  title: 'Erneuerung von Microsoft 365 Certified: Developer Associate'
+  title: 'Erneuerung von Microsoft 365 Certified: Developer Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
   ms.openlocfilehash: 38c37a65a902272b31a81b6ded3ed4ef980aa3a5
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132105586"
 uid: renewal.m365-developer-associate
 certificationUid: certification.m365-developer-associate
 assessmentId: 9036b9d3-e5e5-4d23-b08f-f8c1694a48da
 durationInMinutes: 45
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Microsoft 365-Updates auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der kuratierten Sammlung von Lernmodulen auf die Erneuerung vorbereiten.
+summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Microsoft 365-Aktualisierungen auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der kuratierten Sammlung von Lernmodulen auf die Erneuerung vorbereiten.
 skills:
 - Collect Input in Microsoft Teams with Task Modules
 - Create embedded web experiences with tabs for Microsoft Teams
@@ -23,8 +23,8 @@ skills:
 - Create interactive conversational bots for Microsoft Teams
 examsPassed:
 - ms-600
-studyGuideDescription: 'Nutzen Sie diese Lernmodule, um sich auf das Erneuerungsexamen „Microsoft 365 Certified: Azure Developer Associate“ vorzubereiten.'
+studyGuideDescription: 'Nutzen Sie diese Lernmodule, um sich auf das Erneuerungsexamen Microsoft 365 Certified: Azure Developer Associate vorzubereiten.'
 resources:
 - title: Informationen zur Zertifizierungserneuerung
-  summary: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
+  summary: Grundlagen zum Prozess und zu den Anforderungen der Onlineverlängerung Ihrer Zertifizierungen
   url: https://docs.microsoft.com/learn/certifications/renew-your-microsoft-certification
