--- a/learn-certs-pr/mos-access-expert-2019/index.yml
+++ b/learn-certs-pr/mos-access-expert-2019/index.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Certification
-title: 'Microsoft Office Specialist: Microsoft Access Expert (Access und Access 2019)'
+title: 'Microsoft Office Specialist: Microsoft Access Expert (Access and Access 2019)'
 metadata:
-  title: 'Microsoft Office Specialist: Microsoft Access Expert (Access und Access 2019)'
+  title: 'Microsoft Office Specialist: Microsoft Access Expert (Access and Access 2019)'
   description: 'Zeigen Sie, dass Sie über die erforderlichen Qualifikationen verfügen, das Potential von Access voll auszuschöpfen, indem Sie die Zertifizierung „Microsoft Office Specialist: Access Expert“ erwerben.'
   ms.openlocfilehash: 202a149a8e7111322f702959e7ba4dc9fbd06e6f
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132105427"
 uid: certification.mos-access-expert-2019
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
@@ -47,6 +47,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn in LinkedIn oder in Ihrem Lebenslauf hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
