--- a/learn-certs-pr/mos-powerpoint-2019/index.yml
+++ b/learn-certs-pr/mos-powerpoint-2019/index.yml
@@ -1,13 +1,13 @@
 ### YamlMime:Certification
-title: 'Microsoft Office Specialist: PowerPoint Associate (PowerPoint und PowerPoint 2019)'
+title: 'Microsoft Office Specialist: PowerPoint Associate (PowerPoint and PowerPoint 2019)'
 metadata:
-  title: 'Microsoft Office Specialist: PowerPoint Associate (PowerPoint und PowerPoint 2019)'
+  title: 'Microsoft Office Specialist: PowerPoint Associate (PowerPoint and PowerPoint 2019)'
   description: 'Zeigen Sie, dass Sie über die zur optimalen Nutzung von PowerPoint erforderlichen Fähigkeiten verfügen, indem Sie die Zertifizierung „Microsoft Office Specialist: PowerPoint Associate“ erwerben.'
   ms.openlocfilehash: 5a3969c0b2098a866fbd2084c70e1aa5e3060114
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
+  ms.lasthandoff: 12/28/2021
   ms.locfileid: "132112136"
 uid: certification.mos-powerpoint-2019
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
@@ -47,6 +47,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg in Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise LinkedIn oder Ihrem Lebenslauf hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
