commit translated contents

--- a/learn-certs-pr/m365-enterprise-administrator/index.yml
+++ b/learn-certs-pr/m365-enterprise-administrator/index.yml
@@ -2,22 +2,22 @@
 title: 'Microsoft 365 Certified: Enterprise Administrator Expert'
 metadata:
   title: 'Microsoft 365 Certified: Enterprise Administrator Expert'
-  description: Der Microsoft 365 Unternehmensadministrator nimmt an der Auswertung, Planung, Migration, Bereitstellung und Verwaltung Microsoft 365 Dienste teil.
-  ms.openlocfilehash: be1b77f95088e704af018e3de723a199b78e8743
-  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  description: Microsoft 365 Enterprise Administrators sind Teil der Vorgänge zum Bewerten, Planen, Migrieren, Bereitstellen und Verwalten von Microsoft 365-Diensten.
+  ms.openlocfilehash: ce7a06698be6761251685f48e0e14d33a8a6f6d2
+  ms.sourcegitcommit: 002839b3d184746f9396fb508f4ea29bdbf66a70
   ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/28/2021
-  ms.locfileid: "133301647"
+  ms.lasthandoff: 01/12/2022
+  ms.locfileid: "135801562"
 uid: certification.m365-enterprise-administrator
 certificationRenewalUid: renewal.m365-enterprise-administrator
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: >-
-  <div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde vor Kurzem aktualisiert. <a href="/learn/certifications/exams/ms-101">Die Prüfung MS-101</a> wurde am 24. November 2021 und <a href="/learn/certifications/exams/ms-100">die Prüfung MS-100</a> am 30. November 2021 aktualisiert. Laden Sie die Dokumente mit den gemessenen Qualifikationen auf den zugehörigen Prüfungseiten herunter, um Änderungen anzuzeigen.</strong></font><br/><br/></div>
+  <div><strong>WICHTIG: Die englischsprachige Version dieser Zertifizierung wird in Kürze aktualisiert. <a href="/learn/certifications/exams/ms-101">Die Prüfung MS-101</a> wird am 2. Februar 2022 aktualisiert. <a href="/learn/certifications/exams/ms-100">Die Prüfung MS-100</a> wurde am 30. November 2021 aktualisiert. Laden Sie die Dokumente mit den gemessenen Qualifikationen auf den zugehörigen Prüfungseiten herunter, um aktuelle und bevorstehende Änderungen anzuzeigen.</strong><br/><br/></div>
 
 
-  Microsoft 365 Unternehmensadministratoren Microsoft 365 Dienste auswerten, planen, migrieren, bereitstellen und verwalten.
-subTitle: Microsoft 365 Unternehmensadministratoren Microsoft 365 Dienste auswerten, planen, migrieren, bereitstellen und verwalten.
+  Microsoft 365 Enterprise Administrators bewerten, planen, migrieren, verwalten und stellen Microsoft 365-Dienste bereit.
+subTitle: Microsoft 365 Enterprise Administrators bewerten, planen, migrieren, verwalten und stellen Microsoft 365-Dienste bereit.
 levels:
 - advanced
 skills:
