--- a/learn-certs-pr/courses/md-101t00.yml
+++ b/learn-certs-pr/courses/md-101t00.yml
@@ -3,12 +3,12 @@ title: Moderne Desktops verwalten
 metadata:
   title: 'Kurs MD-101T00--A: Verwalten moderner Desktops'
   description: 'Kurs MD-101T00--A: Verwalten moderner Desktops'
-  ms.openlocfilehash: 7a0a3fa73e80734a02c8f1b04618da22cf1d3a8f
-  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
+  ms.openlocfilehash: 29c25ad032a0b4539c2cfdc2268bb5f289821704
+  ms.sourcegitcommit: 002839b3d184746f9396fb508f4ea29bdbf66a70
   ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/28/2021
-  ms.locfileid: "135573334"
+  ms.lasthandoff: 01/12/2022
+  ms.locfileid: "135801738"
 uid: course.md-101t00
 courseNumber: MD-101T00
 hoursToComplete: 120
@@ -32,14 +32,14 @@ products:
 exams:
 - uid: exam.md-101
 summary: >-
-  In diesem Kurs lernen die Teilnehmer, wie sie eine Strategie zur Bereitstellung eines Betriebssystems unter Verwendung moderner Bereitstellungsmethoden planen und einrichten, sowie eine Aktualisierungsstrategie einrichten können. Die Teilnehmer werden in die Schlüsselkomponenten moderner Management- und Co-Management-Strategien eingeführt. Dieser Kurs behandelt auch, was es braucht, um Microsoft Intune in Ihre Organisation zu integrieren. Die Teilnehmer lernen auch Methoden für die Bereitstellung und Verwaltung von Anwendungen und browserbasierten Anwendungen kennen. Die Teilnehmer werden in die Schlüsselkonzepte der Sicherheit im modernen Management eingeführt, einschließlich Authentifizierung, Identitäten, Zugriff und Konformitäts-Richtlinien. Die Kursteilnehmer werden mit Technologien wie Azure Active Directory, Azure Information Protection und Microsoft Defender for Endpoint sowie mit deren Nutzung zum Schutz von Geräten und Daten vorgestellt.
+  In diesem Kurs lernen die Teilnehmer, wie sie eine Strategie zur Bereitstellung eines Betriebssystems unter Verwendung moderner Bereitstellungsmethoden planen und einrichten, sowie eine Aktualisierungsstrategie einrichten können. Die Teilnehmer werden in die Schlüsselkomponenten moderner Management- und Co-Management-Strategien eingeführt. Dieser Kurs behandelt auch, was es braucht, um Microsoft Intune in Ihre Organisation zu integrieren. Die Teilnehmer lernen auch Methoden für die Bereitstellung und Verwaltung von Anwendungen und browserbasierten Anwendungen kennen. Die Teilnehmer werden in die Schlüsselkonzepte der Sicherheit im modernen Management eingeführt, einschließlich Authentifizierung, Identitäten, Zugriff und Konformitäts-Richtlinien. Die Kursteilnehmer werden mit Technologien wie Azure Active Directory, Azure Information Protection und Microsoft Defender für Endpoint sowie mit deren Nutzung zum Schutz von Geräten und Daten vorgestellt.
 
 
   #### <a name="audience-profile"></a>Zielgruppenprofil
 
 
-  Der Modern Desktop Administrator verteilt, konfiguriert, sichert, verwaltet und überwacht Geräte und Client-Anwendungen in einer Unternehmensumgebung. Zu den Aufgaben gehört die Verwaltung von Identität, Zugriff, Richtlinien, Updates und Anwendungen. Der MDA arbeitet mit dem M365 Enterprise Administrator zusammen, um eine Gerätestrategie zu entwickeln und zu implementieren, die den Geschäftsanforderungen eines modernen Unternehmens entspricht. Der moderne Desktopadministrator muss mit M365-Workloads vertraut sein und über hohe Kenntnisse und Erfahrung im Bereitstellen, Konfigurieren und Verwalten von Windows 10- und höher- und nicht Windows-Geräten verfügen. Die Rolle des MDA konzentriert sich auf Cloud Services und nicht auf Technologien für das lokale Management.
-prerequisitesSection: Der moderne Desktopadministrator muss mit M365-Workloads vertraut sein und über hohe Kenntnisse und Kenntnisse in der Bereitstellung, Konfiguration und Wartung von Windows 10 und höher sowie nicht Windows verfügen. Die Rolle des MDA konzentriert sich auf Cloud Services und nicht auf Technologien für das lokale Management. Es wird empfohlen, dass Kursteilnehmer den Kurs MD-100, Windows Client, abschließen, bevor sie an diesem Kurs teilnahmen.
+  Der Modern Desktop Administrator verteilt, konfiguriert, sichert, verwaltet und überwacht Geräte und Client-Anwendungen in einer Unternehmensumgebung. Zu den Aufgaben gehört die Verwaltung von Identität, Zugriff, Richtlinien, Updates und Anwendungen. Der MDA arbeitet mit dem M365 Enterprise Administrator zusammen, um eine Gerätestrategie zu entwickeln und zu implementieren, die den Geschäftsanforderungen eines modernen Unternehmens entspricht. Der Modern Desktop-Administrator muss mit M365-Workloads vertraut sein und über fundierte Kenntnisse und Kenntnisse in Bezug auf die Bereitstellung, Konfiguration und Wartung von Windows 10 und späteren und nicht Windows Geräten verfügen. Die Rolle des MDA konzentriert sich auf Cloud Services und nicht auf Technologien für das lokale Management.
+prerequisitesSection: Der Modern Desktop-Administrator muss mit M365-Workloads vertraut sein und über fundierte Kenntnisse und Kenntnisse in Bezug auf die Bereitstellung, Konfiguration und Wartung von Windows 10 und höher sowie nicht Windows Geräten verfügen. Die Rolle des MDA konzentriert sich auf Cloud Services und nicht auf Technologien für das lokale Management. Es wird empfohlen, dass Die Kursteilnehmer den Md-100-Kurs Windows Client abschließen, bevor Sie diesen Kurs absolvieren.
 outlineSection: >-
   ### <a name="module-1-modern-management"></a>Modul 1: Moderne Verwaltung
 
@@ -70,6 +70,9 @@ outlineSection: >-
 
 
   ####
+
+
+  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
 
 
   *   Beschreiben des Lebenszyklus des Unternehmensdesktops
@@ -172,6 +175,9 @@ outlineSection: >-
   ####
 
 
+  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
+
+
   *   Beschreiben der verschiedenen Typen von Geräteprofilen in Intune
 
 
@@ -232,6 +238,9 @@ outlineSection: >-
 
 
   ####
+
+
+  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
 
 
   *   Beschreiben der Methoden zur Anwendungsverwaltung
@@ -296,6 +305,9 @@ outlineSection: >-
   ####
 
 
+  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
+
+
   *   Beschreiben von Windows Hello for Business
 
 
@@ -318,7 +330,7 @@ outlineSection: >-
   ### <a name="module-6-managing-security"></a>Modul 6: Verwalten der Sicherheit
 
 
-  In diesem Modul lernen die Teilnehmer den Datenschutz kennen. Die Themen enthalten Windows &amp; Azure Information Protection und verschiedene Verschlüsselungstechnologien, die in Windows unterstützt werden. Dieses Modul behandelt auch die wichtigsten Funktionen von Microsoft Defender für Endpoint und die Implementierung dieser Funktionen auf Geräten in Ihrer Organisation. Das Modul ist mit der Verwendung von Microsoft Defender und Funktionen wie Antivirus, Firewall und Credential Guard abgeschlossen.
+  In diesem Modul lernen die Teilnehmer den Datenschutz kennen. Zu den Themen gehören Windows &amp; Azure Information Protection und verschiedene Verschlüsselungstechnologien, die in der Windows. Dieses Modul behandelt auch die wichtigsten Funktionen von Microsoft Defender für Endpoint und die Implementierung dieser Funktionen auf Geräten in Ihrer Organisation. Das Modul schließt die Verwendung von Microsoft Defender und der Verwendung von Funktionen wie Antivirus, Firewall und Credential Guard ab.
 
 
   #### <a name="lessons"></a>Lektionen
@@ -352,13 +364,16 @@ outlineSection: >-
   ####
 
 
-  *   Beschreiben der Methoden zum Schutz von Gerätedaten.
+  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
 
 
-  *   Beschreiben sie die Funktionen und Vorteile von Windows ATP.
+  *   Beschreiben der Methoden zum Schützen von Gerätedaten
 
 
-  *   Bereitstellen und Verwalten von Einstellungen für Windows Defender Clients.
+  *   Beschreiben der Möglichkeiten und Vorteile von Windows ATP
+
+
+  *   Bereitstellen und Verwalten von Einstellungen für Windows Defender-Clients
 
 
 
@@ -390,20 +405,23 @@ outlineSection: >-
   ####
 
 
+  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
+
+
   *   Beschreiben der Tools zum Planen einer Bereitstellung
 
 
   *   Bereitstellen Windows Clients mithilfe der Microsoft Deployment Toolkit
 
 
-  *   Bereitstellen Windows Clients mit endpoint Konfigurations-Manager
+  *   Bereitstellen Windows clients using Endpoint Konfigurations-Manager
 
 
 
   ### <a name="module-8-deployment-using-microsoft-endpoint-manager---part-2"></a>Modul 8: Bereitstellung mit Microsoft Endpoint Manager – Teil 2
 
 
-  In diesem Modul wird die Bereitstellung mit Microsoft Endpoint Manager fortgesetzt. Im zweiten Teil erlernen die Teilnehmer die Verwendung von Windows Autopilot und Bereitstellung mit Microsoft Intune. Dieses Modul umfasst auch dynamische Methoden zur Betriebssystembereitstellung, z. B. Abonnementaktivierung. Zum Abschluss des Moduls wird gezeigt, wie Co-Management für den Übergang zu einem modernen Management genutzt werden kann. Schließlich werden die Kursteilnehmer mit Azure Virtual Desktops und der Konfiguration und Verwaltung von Cloud-PCs mit Windows 365 vorgestellt.
+  In diesem Modul wird die Bereitstellung mit Microsoft Endpoint Manager fortgesetzt. Im zweiten Teil erlernen die Teilnehmer die Verwendung von Windows Autopilot und Bereitstellung mit Microsoft Intune. Dieses Modul umfasst auch dynamische Methoden zur Betriebssystembereitstellung, z. B. Abonnementaktivierung. Zum Abschluss des Moduls wird gezeigt, wie Co-Management für den Übergang zu einem modernen Management genutzt werden kann. Schließlich werden die Kursteilnehmer mit Azure Virtual Desktops und der Konfiguration und Verwaltung von Cloud-PCs mithilfe von Windows 365 vorgestellt.
 
 
   #### <a name="lessons"></a>Lektionen
@@ -434,6 +452,9 @@ outlineSection: >-
   ####
 
 
+  Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
+
+
   *   Bereitstellen von Windows 10 mit Autopilot
 
 
@@ -444,10 +465,10 @@ outlineSection: >-
 
 
 
-  ### <a name="module-9-managing-updates-and-using-analytics"></a>Modul 9: Verwalten von Updates und Verwenden von Analysen
+  ### <a name="module-9-managing-updates-and-using-analytics"></a>Modul 9: Verwalten von Updates und Verwenden von Analytics
 
 
-  Dieses Modul deckt die Verwaltung von Updates für Windows ab. In diesem Modul werden die Wartungsoptionen für Windows-Clients vorgestellt. Die Teilnehmer lernen die verschiedenen Methoden zur Bereitstellung von Updates kennen und erfahren, wie die Update-Richtlinien von Windows konfiguriert werden. Schließlich lernen die Teilnehmer, wie sie mit Desktop Analytics Aktualisierungen sicherstellen und überwachen können.
+  Dieses Modul deckt die Verwaltung von Updates für Windows ab. In diesem Modul werden die Wartungsoptionen für Windows- und Windows. Die Teilnehmer lernen die verschiedenen Methoden zur Bereitstellung von Updates kennen und erfahren, wie die Update-Richtlinien von Windows konfiguriert werden. Schließlich lernen die Teilnehmer, wie sie mit Desktop Analytics Aktualisierungen sicherstellen und überwachen können.
 
 
   #### <a name="lessons"></a>Lektionen
@@ -475,10 +496,10 @@ outlineSection: >-
   Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
 
 
-  *   Beschreiben sie die Windows Clientwartungskanäle.
+  *   Beschreiben der Windows Clientwartungskanäle.
 
 
-  *   Konfigurieren einer Windows-Richtlinie mithilfe Gruppenrichtlinie Einstellungen
+  *   Konfigurieren einer Windows Update-Richtlinie mithilfe von Gruppenrichtlinieneinstellungen
 
 
   *   Konfigurieren von Windows Update for Business zur Bereitstellung von Betriebssystemupdates
@@ -487,4 +508,4 @@ outlineSection: >-
   *   Bewerten der Upgradebereitschaft mit Desktop Analytics
 
 
-  *   Verwenden von Endpoint Analytics zum Überwachen der Benutzererfahrung und Bewerten Windows 11 Bereitschaft
+  *   Verwenden von Endpoint Analytics zum Überwachen der Benutzerfreundlichkeit und Bewerten der Windows 11 Bereitschaft
