--- a/learn-certs-pr/exams/dp-420.yml
+++ b/learn-certs-pr/exams/dp-420.yml
@@ -19,7 +19,7 @@ summary: >-
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Entwerfen und Implementieren von Datenmodellen; Entwerfen und Implementieren der Datenverteilung; Integrieren sie eine Azure Cosmos DB-Lösung, optimieren Sie eine Azure Cosmos DB-Lösung, und verwalten Sie eine Azure Cosmos DB-Lösung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWMvIJ
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=DP-420&examname=Exam%20DP-420:%20Designing%20and%20Implementing%20Cloud-Native%20Applications%20Using%20Microsoft%20Azure%20Cosmos%20DB&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-420
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=DP-420&examname=Exam%20DP-420:%20Designing%20and%20Implementing%20Cloud-Native%20Applications%20Using%20Microsoft%20Azure%20Cosmos%20DB&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-420
 locales:
 - en
 levels:
