--- a/learn-certs-pr/exams/az-800.yml
+++ b/learn-certs-pr/exams/az-800.yml
@@ -24,7 +24,7 @@ summary: >-
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Bereitstellen und Verwalten von Active Directory Domain Services (AD DS) in lokalen und Cloudumgebungen; Verwalten von Windows Servers und Workloads in einer hybriden Umgebung; Verwalten von virtuellen Maschinen und Containern; Implementieren und Verwalten einer lokalen und hybriden Netzwerkinfrastruktur; Verwalten von Speicher- und Dateidiensten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWKI0r
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-800&examname=Exam%20AZ-800:%20Administering%20Windows%20Server%20Hybrid%20Core%20Infrastructure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-800
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=AZ-800&examname=Exam%20AZ-800:%20Administering%20Windows%20Server%20Hybrid%20Core%20Infrastructure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-800
 locales:
 - en
 levels:
