--- a/learn-certs-pr/exams/az-801.yml
+++ b/learn-certs-pr/exams/az-801.yml
@@ -24,7 +24,7 @@ summary: >-
 subTitle: 'In diesem Examen wird Ihre Fähigkeit bewertet, die folgenden technischen Aufgaben zu bewältigen: Sichern von lokalen und hybriden Windows Server-Infrastrukturen, Implementieren und Verwalten von Windows Server-Hochverfügbarkeit, Implementieren der Notfallwiederherstellung, Migrieren von Servern und Workloads sowie Überwachen und Behandeln von Problemen von Windows Server-Umgebungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWKPgH
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-801&examname=Exam%20AZ-801:%20Configuring%20Windows%20Server%20Hybrid%20Advanced%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-801
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=AZ-801&examname=Exam%20AZ-801:%20Configuring%20Windows%20Server%20Hybrid%20Advanced%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-801
 locales:
 - en
 levels:
