--- a/learn-certs-pr/exams/mb-260.yml
+++ b/learn-certs-pr/exams/mb-260.yml
@@ -27,7 +27,7 @@ summary: >-
 subTitle: 'In diesem Examen wird Ihre Fähigkeit abgefragt, die folgenden technischen Aufgaben auszuführen: Entwerfen von Customer Insights-Lösungen; Erfassen von Daten in Customer Insights; Erstellen von Kundenprofilen durch Vereinheitlichen von Daten; Implementieren von KI-Vorhersagen in Customer Insights; Konfigurieren von Measures und Segmenten; Konfigurieren von Drittanbieterverbindungen; und Verwalten von Customer Insights.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWMD8f
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-260&examname=Exam%20MB-260:%20Microsoft%20Customer%20Data%20Platform%20Specialist&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-260
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MB-260&examname=Exam%20MB-260:%20Microsoft%20Customer%20Data%20Platform%20Specialist&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-260
 locales:
 - en
 levels:
