--- a/learn-certs-pr/exams/mb-340.yml
+++ b/learn-certs-pr/exams/mb-340.yml
@@ -26,7 +26,7 @@ summary: >-
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Konfigurieren von Dynamics 365 Commerce Headquarters, Konfigurieren von Produkten, Preisen, Rabatten, Loyalität und Zugehörigkeiten, Verwalten von Point-of-Sales-Systemen (POS) in Dynamics 365 Commerce, Konfigurieren und Verwalten von Dynamics 365 Commerce-Callcentern und Verwalten von E-Commerce.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWCZKn
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-340&examname=Exam%20MB-340:%20Microsoft%20Dynamics%20365%20Commerce%20Functional%20Consultant&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-340
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MB-340&examname=Exam%20MB-340:%20Microsoft%20Dynamics%20365%20Commerce%20Functional%20Consultant&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-340
 locales:
 - en
 levels:
