commit translated contents

--- a/learn-certs-pr/TOC.yml
+++ b/learn-certs-pr/TOC.yml
@@ -67,7 +67,7 @@
       items:
         - name: Studierendenrabatte
           href: student-discounts.md
-        - name: Schulung und Zertifizierung von Studenten
+        - name: Schulungen und Zertifizierungen für Studierende
           href: student-training-and-certification.md
         - name: Leistungspunkte für Zertifizierungsexamen
           href: college-credit.md
