--- a/learn-certs-pr/courses/dp-900t00.yml
+++ b/learn-certs-pr/courses/dp-900t00.yml
@@ -59,7 +59,7 @@ prerequisitesSection: >-
   Dies gilt insbesondere in folgenden Fällen:&nbsp; &nbsp;
    * Erfahrung im Verwenden eines Webbrowsers, z. B. [Microsoft Edge](https://support.microsoft.com/microsoft-edge?ocid=DMC-End-User-Support&amp;ui).
    * Vertrautheit mit grundlegenden datenbezogenen Konzepten, z. B. Arbeiten mit Datentabellen in einem Arbeitsblatt und Visualisieren von Daten mithilfe von Diagrammen.
-   * Bereitschaft, durch praktische Erfahrungen zu lernen.
+   * Bereitschaft, durch praktische Übungen zu lernen
 outlineSection: >-
   ### <a name="module-1-explore-core-data-concepts"></a>Modul 1: Untersuchen der wichtigsten Datenkonzepte
 
