--- a/learn-certs-pr/courses/ms-720t00.yml
+++ b/learn-certs-pr/courses/ms-720t00.yml
@@ -15,7 +15,7 @@ hoursToComplete: 72
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Planen und Konfigurieren von Microsoft Teams Telefon
-- skill: Die Netzwerkleistung für Teams Telefon zu planen und zu optimieren
+- skill: Planen und Optimieren der Netzwerkleistung für Teams Telefon
 - skill: Konfigurieren und Bereitstellen von Direct Routing
 - skill: Konfigurieren, Bereitstellen und Verwalten von Teams-Geräten
 - skill: Überwachen und Behandeln von Problemen von Teams Telefon
