--- a/learn-certs-pr/information-protection-administrator/renew/index.yml
+++ b/learn-certs-pr/information-protection-administrator/renew/index.yml
@@ -14,7 +14,7 @@ certificationUid: certification.information-protection-administrator
 assessmentId: 2d0f2399-1a20-48d5-8f20-959ab9b70a77
 durationInMinutes: 45
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Microsoft 365-Updates auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der kuratierten Sammlung von Lernmodulen auf die Erneuerung vorbereiten.
+summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Microsoft 365-Aktualisierungen auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der kuratierten Sammlung von Lernmodulen auf die Erneuerung vorbereiten.
 skills:
 - Create and manage sensitive information types
 - Protect information in Microsoft 365
