--- a/learn-certs-pr/exams/mb-340.yml
+++ b/learn-certs-pr/exams/mb-340.yml
@@ -3,12 +3,12 @@ title: Microsoft Dynamics 365 Commerce Functional Consultant
 metadata:
   title: 'MB-340: Microsoft Dynamics 365 Commerce Functional Consultant'
   description: 'MB-340: Microsoft Dynamics 365 Commerce Functional Consultant'
-  ms.openlocfilehash: 5c63eb0d66454b3647ce67ab3fc4690e74a34571
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: 4a1b2a8d0624360bd7f8becff740e37cb67d7dd3
+  ms.sourcegitcommit: a99616c85658bcdbb3b95b115da620965190777e
   ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137655936"
+  ms.lasthandoff: 01/25/2022
+  ms.locfileid: "137685915"
 uid: exam.mb-340
 displayName: MB-340
 summary: >-
@@ -22,11 +22,13 @@ summary: >-
   Kandidaten für diese Prüfung richten die Anwendungsfunktionalität in Dynamics 365 Commerce ein und verwenden sie. Zudem stellen sie Support für die Anwendung bereit.
 
 
+  <br/>
+
   Kandidaten verfügen über ein ausgeprägtes Verständnis von einheitlichen Vorgängen im Commercebereich. Sie besitzen nach Möglichkeit Erfahrung im Konfigurieren, Bereitstellen und Verwalten von Dynamics 365 Commerce.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Konfigurieren von Dynamics 365 Commerce Headquarters, Konfigurieren von Produkten, Preisen, Rabatten, Loyalität und Zugehörigkeiten, Verwalten von Point-of-Sales-Systemen (POS) in Dynamics 365 Commerce, Konfigurieren und Verwalten von Dynamics 365 Commerce-Callcentern und Verwalten von E-Commerce.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWCZKn
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MB-340&examname=Exam%20MB-340:%20Microsoft%20Dynamics%20365%20Commerce%20Functional%20Consultant&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-340
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-340&examname=Exam%20MB-340:%20Microsoft%20Dynamics%20365%20Commerce%20Functional%20Consultant&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-340
 locales:
 - en
 levels:
