--- a/learn-certs-pr/exams/ms-720.yml
+++ b/learn-certs-pr/exams/ms-720.yml
@@ -3,12 +3,12 @@ title: Microsoft Teams Voice Engineer
 metadata:
   title: 'Exam MS-720: Microsoft Teams Voice Engineer'
   description: 'Exam MS-720: Microsoft Teams Voice Engineer'
-  ms.openlocfilehash: 9ec47dbba934d052e0c5e22f9827f99eed36dd3b
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: 2c28349a3cfa2f58774c12f448def2e3e863ad1a
+  ms.sourcegitcommit: a99616c85658bcdbb3b95b115da620965190777e
   ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137657817"
+  ms.lasthandoff: 01/25/2022
+  ms.locfileid: "137685512"
 uid: exam.ms-720
 displayName: MS-720
 summary: >-
@@ -22,6 +22,8 @@ summary: >-
   Kandidaten für diese Prüfung sind Microsoft Teams Voice Engineers, die integrierte Kommunikationslösungen in einer Organisation planen, entwerfen, konfigurieren und warten sowie Probleme behandeln. Sie müssen in der Lage sein, Geschäftsanforderungen in technische Architekturen und Entwürfe für Kommunikationslösungen umzusetzen.
 
 
+  <br/>
+
   Kandidaten sind mit Telekommunikationstechnologien vertraut und verfügen über Erfahrung mit Microsoft Teams, Microsoft 365 und PowerShell. Sie müssen in der Lage sein, Microsoft Teams-Telefon mit PSTN-Konnektivität über Direct Routing, Telefonieanbieter und Microsoft Teams-Anrufpläne bereitzustellen und zu konfigurieren. Die Kandidaten verwalten darüber hinaus Geräte, die für Microsoft Teams, Audio-/Videokonferenzen und Sprachmigration zertifiziert sind.
 
 
@@ -31,7 +33,7 @@ iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWLFS2
 providers:
 - providerType: pearson-vue
-  examUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MS-720&examname=Exam%20MS-720:%20Microsoft%20Teams%20Voice%20Engineer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-720
+  examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MS-720&examname=Exam%20MS-720:%20Microsoft%20Teams%20Voice%20Engineer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-720
 locales:
 - en
 levels:
