--- a/learn-certs-pr/exams/ms-740.yml
+++ b/learn-certs-pr/exams/ms-740.yml
@@ -3,12 +3,12 @@ title: Problembehandlung bei Microsoft Teams
 metadata:
   title: 'Examen MS-740: Problembehandlung bei Microsoft Teams'
   description: 'Examen MS-740: Problembehandlung bei Microsoft Teams'
-  ms.openlocfilehash: 2a8733649a057203eb8c698aec6e6701e8f7d50b
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: f7be9694a7afae88020378ec9cbfdfc9b8913f4b
+  ms.sourcegitcommit: a99616c85658bcdbb3b95b115da620965190777e
   ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137656475"
+  ms.lasthandoff: 01/25/2022
+  ms.locfileid: "137685732"
 uid: exam.ms-740
 displayName: MS-740
 summary: >-
@@ -22,11 +22,13 @@ summary: >-
   Die Kandidat*innen für dieses Examen sind Supporttechniker*innen, die fortgeschrittene Problembehandlungsmethoden verwenden, um Microsoft Teams-Umgebungen zu unterstützen, Telemetrie- und Protokolldaten zu analysieren, Probleme bei Bereitstellungen zu behandeln und die Leistung zu optimieren. Es wird erwartet, dass die Kandidat*innen Protokolle und andere Daten überprüfen, die Grundursache eines Problems erkennen und eine Lösung bereitstellen.
 
 
+  <br/>
+
   Die Kandidat*innen sollten über weitreichende Erfahrung bei der Problembehandlung von vereinheitlichten Kommunikationslösungen sowie über praktische Kompetenzen insbesondere bei der Problembehandlung von Microsoft Teams verfügen. Darüber hinaus sollten die Kandidat*innen über Netzwerkkenntnisse in Bezug auf Azure-Grundlagen, Telefonie, PowerShell, Datenspeichertechnologien, APIs, App-Sicherheit, Authentifizierung und Autorisierung, Sicherheits- und Complianceinformationen, Debuggen, Leistung, Optimierung und Überwachung verfügen.
 subTitle: 'In diesem Examen wird Ihre Fähigkeit geprüft, in den folgenden technischen Aufgabenszenarios Probleme zu behandeln: Sprachprobleme bei Microsoft Teams, Besprechungen und Liveereignisse in Microsoft Teams, Verbundprobleme, Anmelden bei Microsoft Teams, Teams und Kanäle sowie Dateien.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4O2rS
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MS-740&examname=Exam%20MS-740:%20Troubleshooting%20Microsoft%20Teams&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-740
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MS-740&examname=Exam%20MS-740:%20Troubleshooting%20Microsoft%20Teams&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-740
 locales:
 - en
 levels:
